--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.4",  // Updated axios for security improvements
-    "bootstrap": "^4.6.0",  // Updated bootstrap for improvements and fixes
+    "axios": "^0.21.4",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
